# mule2logic-cli

./: .gitignore  LICENSE  README.md  mule2logic-cli-spec-v2.md  package-lock.json  package.json  pyproject.toml  test_logging_output.md  tsconfig.json
.github/: copilot-instructions.md
.github/actions/setup-python-uv/: action.yml
.github/agents/: bicep-infra.agent.md  foundry-agent.agent.md  python-backend.agent.md  qa.agent.md  tech-writer.agent.md  typescript-cli.agent.md
.github/instructions/: src-cli.instructions.md  src-commands.instructions.md  src-core.instructions.md  tests.instructions.md
.github/prompts/: 01-scaffold-project.prompt.md  02-implement-io.prompt.md  03-implement-prompt.prompt.md  04-implement-validate.prompt.md  05-implement-copilot-client.prompt.md  06-implement-convert-command.prompt.md  add-tests.prompt.md  implement-cli.prompt.md  implement-convert-command.prompt.md  implement-core-modules.prompt.md  integrate-copilot-sdk.prompt.md  setup-project.prompt.md
.github/skills/connector-mapping/: SKILL.md
.github/skills/logic-apps-standard/: SKILL.md
.github/skills/mulesoft-project/: SKILL.md
.github/skills/mulesoft-to-logicapps-project-mapper/: SKILL.md
.github/workflows/: bicep-what-if.yml  deploy.yml  pr-validation.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/src/m2la_api/: __init__.py  dependencies.py  main.py
apps/api/src/m2la_api/config/: __init__.py  settings.py
apps/api/src/m2la_api/middleware/: __init__.py  api_key.py
apps/api/src/m2la_api/models/: __init__.py  errors.py
apps/api/src/m2la_api/routes/: __init__.py  analyze.py  health.py  route_utils.py  transform.py  validate.py
apps/api/src/m2la_api/services/: result_mapper.py  upload_handler.py
apps/api/src/m2la_api/telemetry/: __init__.py  metrics.py
apps/api/tests/: conftest.py  test_analyze.py  test_api_key.py  test_config.py  test_errors.py  test_health.py  test_integration_pipeline.py  test_transform.py  test_validate.py  upload_helpers.py
apps/cli/: eslint.config.js  package-lock.json  package.json
apps/cli/src/: config.ts  index.ts
apps/cli/tests/: api-client.test.ts  banner.test.ts  commands.test.ts  config.test.ts  input-detector.test.ts  input-validator.test.ts  output.test.ts  telemetry.test.ts
docs/: architecture.md  copilot-coding-agent-implementation-plan.md  deployment.md  example-migration-report.md  mule2logic-cli-spec.md  test-cases.md
docs/adrs/: README.md
docs/architecture/: README.md
docs/runbooks/: README.md  deployment.md
infra/bicep/: README.md  main.bicep  main.dev.bicepparam  main.json  main.prod.bicepparam  main.test.bicepparam
infra/bicep/modules/: ai-foundry.bicep  ai-foundry.json  ai-services.bicep  app-insights.bicep  container-app.bicep  container-apps-env.bicep  container-apps.bicep  container-registry.bicep  identity.bicep  log-analytics.bicep  managed-identity.bicep  model-deployment.bicep  (+3 more)
infra/scripts/: deploy-container-app.sh
services/agents/: README.md  pyproject.toml
services/agents/src/m2la_agents/: __init__.py  analyzer.py  base.py  function_tools.py  models.py  orchestrator.py  planner.py  prompts.py  repair_advisor.py  sdk_config.py  token_estimator.py  transformer.py  validator.py
services/agents/src/m2la_agents/grounding/: __init__.py  context7.py  errors.py  microsoft_learn.py  models.py  tool_functions.py
services/agents/src/m2la_agents/prompts/: analyzer.md  orchestrator.md  planner.md  repair_advisor.md  transformer.md  validator.md
services/agents/tests/: conftest.py  mock_chat_client.py  test_analyzer.py  test_grounding.py  test_orchestrator.py  test_planner.py  test_repair_advisor.py  test_sdk_integration.py  test_token_estimator.py  test_transformer.py  test_validator.py
services/ir/: README.md  pyproject.toml
services/ir/src/m2la_ir/: __init__.py  builders.py  enums.py  models.py  serialization.py
services/ir/tests/: test_choice_router_error_handling.py  test_http_transform_outbound.py  test_models.py  test_scheduler_loop.py  test_serialization.py  test_single_flow_mode.py
services/mapping-config/: README.md  pyproject.toml
services/mapping-config/src/m2la_mapping_config/: __init__.py  loader.py  models.py  resolver.py
services/mapping-config/tests/: test_loader.py  test_ranking.py  test_resolver.py
services/parser/: README.md  pyproject.toml
services/parser/src/m2la_parser/: __init__.py  models.py  parse.py  pom_parser.py  project_discovery.py  property_parser.py  single_flow.py  xml_parser.py
services/parser/tests/: conftest.py  test_parse_entrypoint.py  test_pom_parser.py  test_project_discovery.py  test_property_parser.py  test_single_flow.py  test_xml_parser.py
services/transform/: README.md  pyproject.toml
services/transform/src/m2la_transform/: __init__.py  generator.py  models.py  single_flow.py  workflow_generator.py
services/transform/tests/: conftest.py  test_construct_transformations.py  test_generator.py  test_golden.py  test_single_flow.py  test_workflow_generator.py
services/transform/tests/golden/: helloflow_workflow.json  scheduledflow_workflow.json  standalone_flow_workflow.json
services/validate/: README.md  pyproject.toml
src/: cli.js  cli.ts
src/commands/: convert.js  convert.ts
src/core/: assess.ts  copilot.js  copilot.ts  io.js  io.ts  project.ts  prompt.js  prompt.ts  report.js  report.ts  review.js  scaffold.ts  validate.js  validate.ts
src/mule2logic_agent/: __init__.py  models.py  service.py
src/mule2logic_cli/: __init__.py  cli.py  display.py
src/prompts/: assess.prompt.md  assess.user.prompt.md  review.prompt.md  system.prompt.md  user.prompt.md
test/: assess.test.ts  convert.test.js  convert.test.ts  copilot.test.js  copilot.test.ts  io.test.js  io.test.ts  project.test.ts  prompt.test.js  prompt.test.ts  review.test.ts  scaffold.test.ts  validate.test.js  validate.test.ts
test/fixtures/: not-simple-flow.xml  simple-flow.xml
tests/: test_agent.py  test_convert.py  test_io.py  test_prompt.py  test_review.py  test_validate.py
tests/fixtures/: even-less-simple-flow.xml  not-simple-flow.xml
(+46 files in other folders)
