[project]
name = "m2la-api"
version = "0.1.0"
description = "MuleSoft to Logic Apps Standard Migration API"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "m2la-contracts",
]

[tool.uv.sources]
m2la-contracts = { path = "../../packages/contracts", editable = true }

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
m2la-api = "m2la_api.main:main"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
