[project]
name = "m2la-api"
version = "0.1.0"
description = "MuleSoft to Logic Apps Standard Migration API"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "m2la-contracts",
    "m2la-parser",
    "m2la-ir",
    "m2la-mapping-config",
    "m2la-transform",
    "m2la-validate",
    "m2la-agents",
    "pydantic-settings",
    "azure-identity",
    "python-multipart>=0.0.26",
    "aiohttp>=3.9",
    "azure-monitor-opentelemetry>=1.6",
    "opentelemetry-api>=1.20",
]

[tool.uv.sources]
m2la-contracts = { path = "../../packages/contracts", editable = true }
m2la-parser = { path = "../../services/parser", editable = true }
m2la-ir = { path = "../../services/ir", editable = true }
m2la-mapping-config = { path = "../../services/mapping-config", editable = true }
m2la-transform = { path = "../../services/transform", editable = true }
m2la-validate = { path = "../../services/validate", editable = true }
m2la-agents = { path = "../../services/agents", editable = true }

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
m2la-api = "m2la_api.main:main"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"
