[project]
name = "m2la-agents"
version = "0.1.0"
description = "Agent orchestration layer for MuleSoft to Logic Apps migration platform"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "m2la-contracts",
    "m2la-ir",
    "m2la-parser",
    "m2la-transform",
    "m2la-validate",
    "m2la-mapping-config",
    "azure-ai-agents>=1.0",
    "azure-identity>=1.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/m2la_agents"]

[tool.uv.sources]
m2la-contracts = { path = "../../packages/contracts", editable = true }
m2la-ir = { path = "../ir", editable = true }
m2la-parser = { path = "../parser", editable = true }
m2la-transform = { path = "../transform", editable = true }
m2la-validate = { path = "../validate", editable = true }
m2la-mapping-config = { path = "../mapping-config", editable = true }

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
