[project]
name = "m2la-ir"
version = "0.1.0"
description = "Intermediate representation models and builders for MuleSoft to Logic Apps migration"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "m2la-contracts",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/m2la_ir"]

[tool.uv.sources]
m2la-contracts = { path = "../../packages/contracts", editable = true }

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
