[project]
name = "m2la-mapping-config"
version = "0.1.0"
description = "Externalized connector and construct mapping config loader and resolver for MuleSoft to Logic Apps migration"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "PyYAML>=6.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/m2la_mapping_config"]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
