[project]
name = "m2la-parser"
version = "0.1.0"
description = "MuleSoft project and flow XML parsing for the migration platform"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "m2la-contracts",
]

[tool.uv.sources]
m2la-contracts = { path = "../../packages/contracts", editable = true }

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/m2la_parser"]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
