[project]
name = "m2la-transform"
version = "0.1.0"
description = "Logic Apps Standard project generator for MuleSoft to Logic Apps migration"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "m2la-contracts",
    "m2la-ir",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/m2la_transform"]

[tool.uv.sources]
m2la-contracts = { path = "../../packages/contracts", editable = true }
m2la-ir = { path = "../ir", editable = true }

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
